ON/OFF buttons, fix note pop-up
implemented images for ON/OFF button, fixed note pop-up (overflowing
issue), changes mouse cursor in image and panel to 'move', fixed button
alignment in header

--- a/src/panzoom/panzoom.css
+++ b/src/panzoom/panzoom.css
@@ -17,6 +17,7 @@ background:#fff;
 z-index:10;
 width:100%;
 text-align:center;
+cursor:move;
 }
 .panzoom-parent{
 padding: 20px 0 10px 0px;
@@ -28,4 +29,7 @@ overflow:visible;
 .panzoom .zoom-range{
 	width: 70%;
 	margin: auto;
+}
+.viewerContent .buttons button{
+	cursor:pointer;
 }
